# agent_core_integrations

./: .bedrock_agentcore.yaml  .dockerignore  .gitignore  README.md  carton.md  deploy-all.ps1  deploy.ps1  deploy.sh  env.example  papel.md  papel_carton.md  presupuesto.md  presupuesto_carton.md  pyproject.toml  switch-agent.ps1
.bedrock_agentcore/agente_orq_papel_carton/: Dockerfile
.kiro/specs/comersal/: .config.kiro  design.md
agents/: .registry.json  _shared.json  agente-orquestador-papel-carton.json  agente-orquestador-presupuesto.json  agente-presupuesto.json  agente-ventas-carton.json  agente-ventas-papel.json
app/: main.py
app/models/: bedrock.py  schemas.py
app/modules/: athena_provider.py  browser_provider.py  cart_provider.py  config.py  express_agent.py  hooks.py  knowledge_base_provider.py  mcp_provider.py  memory_provider.py  multi_agent.py  orchestrator.py  web_search_provider.py
app/prompts/: __init__.py  analyst.md  athena.md  browser.md  cart.md  knowledge_base.md  migrar.md  researcher.md  sql_rules.md  system.md  system.py  writer.md
app/prompts/agents/: agente-orquestador-papel-carton.md  agente-orquestador-presupuesto.md  agente-presupuesto.md  agente-ventas-carton.md  agente-ventas-papel.md
app/prompts/athena/: __init__.py  clientes.md  complementarios.md  facturas.md  general.md  lista.md  pedidos.md  productos.md  proyecto.md  router.md
src/: main.py
